Made sure the analysis method info was documented

--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -5,6 +5,7 @@ export(calc_fup_red_point)
 export(calc_fup_uc)
 export(calc_fup_uc_point)
 export(calc_red_fup_base)
+export(extract_level1_fup_uc)
 export(format_clint)
 export(format_fup_red)
 export(format_fup_uc)
