--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -5,6 +5,7 @@ export(calc_fup_red_base)
 export(calc_fup_red_point)
 export(calc_fup_uc)
 export(calc_fup_uc_point)
+export(create_chem_table)
 export(create_method_table)
 export(extract_level1_fup_uc)
 export(format_clint)
