Added plot functions and made conc prior more precise for UC model

--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -14,7 +14,10 @@ export(format_caco2)
 export(format_clint)
 export(format_fup_red)
 export(format_fup_uc)
+export(plog_clint)
+export(plog_fup_uc)
 export(summarize_table)
+import(ggplot2)
 import(parallel)
 import(runjags)
 importFrom(stats4,AIC)
