--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -14,8 +14,8 @@ export(format_caco2)
 export(format_clint)
 export(format_fup_red)
 export(format_fup_uc)
-export(plog_clint)
-export(plog_fup_uc)
+export(plot_clint)
+export(plot_fup_uc)
 export(summarize_table)
 import(ggplot2)
 import(parallel)
