--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -10,7 +10,6 @@ export(calc_fup_uc)
 export(calc_fup_uc_point)
 export(create_chem_table)
 export(create_method_table)
-export(extract_level1_fup_uc)
 export(format_caco2)
 export(format_clint)
 export(format_fup_red)
@@ -24,7 +23,7 @@ export(summarize_table)
 import(ggplot2)
 import(parallel)
 import(runjags)
-import(scales)
+importFrom(scales,scientific_format)
 importFrom(stats4,AIC)
 importFrom(stats4,coef)
 importFrom(stats4,mle)
