--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -24,7 +24,7 @@ export(summarize_table)
 import(ggplot2)
 import(parallel)
 import(runjags)
-import(scales)
+importFrom(scales,scientific_format)
 importFrom(stats4,AIC)
 importFrom(stats4,coef)
 importFrom(stats4,mle)
