--- a/invitroTKstats/DESCRIPTION
+++ b/invitroTKstats/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: invitroTKstats
-Version: 0.0.8
-Date: 2023-03-11
+Version: 0.0.9
+Date: 2023-11-21
 Title: Tools for Analyzing In Vitro Toxicokinetic Measurements
 Description: These functions were developed for performing Bayesian
              statistical analysis of in vitro measurements to characterize
@@ -14,12 +14,15 @@ Authors@R: c(
            person("John", "Wambaugh", email = "wambaugh.john@epa.gov", 
              role = c("aut", "cre"),
              comment = c(ORCID = "0000-0002-4024-534X")), 
+           person("Sarah", "Davidson-Fritz", email = "davidsonfritz.sarah@epa.gov", 
+             role = c("aut"), comment = c(ORCID = "0000-0002-2891-9380")),
+           person("Zhao", "Zhihui", role = c("ctb")),
            person("Chantel", "Nicolas", role = c("ctb"),
              comment = c(ORCID = "0000-0003-2061-5830")),
            person("Anna", "Kreutz", role = c("ctb"))
            )
 Depends: R (>= 2.10)
-Imports: runjags, parallel, readxl, coda, ggplot2, Rdpack
+Imports: runjags, parallel, readxl, coda, ggplot2, Rdpack, scales, stats4
 RdMacros: Rdpack
 Suggests:
 License: GPL-3
