Need to import Rdpack if using its macros in roxygen

--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -21,8 +21,11 @@ export(plot_fup_uc)
 export(plot_uc_results)
 export(runjagsdata.to.list)
 export(summarize_table)
+import(Rdpack)
+import(coda)
 import(ggplot2)
 import(parallel)
+import(readxl)
 import(runjags)
 importFrom(scales,scientific_format)
 importFrom(stats4,AIC)
