--- a/invitroTKstats/DESCRIPTION
+++ b/invitroTKstats/DESCRIPTION
@@ -22,7 +22,7 @@ Authors@R: c(
            person("Anna", "Kreutz", role = c("ctb"))
            )
 Depends: R (>= 2.10)
-Imports: runjags, parallel, readxl, coda, ggplot2, Rdpack, scales, stats4
+Imports: runjags, parallel, readxl, coda, ggplot2, scales, stats4, Rdpack
 RdMacros: Rdpack
 Suggests: knitr, R.rsp
 License: GPL-3
@@ -31,5 +31,5 @@ Encoding: UTF-8
 VignetteBuilder: knitr, R.rsp
 RoxygenNote: 7.2.3
 URL: https://www.epa.gov/chemical-research/rapid-chemical-exposure-and-dose-research
-NeedsCompilation: No
+NeedsCompilation: no
 Maintainer: John Wambaugh <wambaugh.john@epa.gov>
