import necessary packages and functions

--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -27,7 +27,16 @@ import(ggplot2)
 import(parallel)
 import(readxl)
 import(runjags)
+importFrom(methods,is)
 importFrom(scales,scientific_format)
+importFrom(stats,lm)
+importFrom(stats,quantile)
+importFrom(stats,rbinom)
+importFrom(stats,runif)
 importFrom(stats4,AIC)
 importFrom(stats4,coef)
 importFrom(stats4,mle)
+importFrom(utils,head)
+importFrom(utils,read.csv)
+importFrom(utils,read.table)
+importFrom(utils,write.table)
