Make sure sample_verification is exported

--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -16,6 +16,7 @@ export(format_fup_uc)
 export(merge_level0)
 export(plot_clint)
 export(plot_fup_uc)
+export(sample_verification)
 export(summarize_table)
 import(Rdpack)
 import(coda)
