--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -7,6 +7,8 @@ export(calc_fup_red)
 export(calc_fup_red_point)
 export(calc_fup_uc)
 export(calc_fup_uc_point)
+export(check_catalog)
+export(create_catalog)
 export(create_chem_table)
 export(create_method_table)
 export(format_caco2)
