--- a/invitroTKstats/DESCRIPTION
+++ b/invitroTKstats/DESCRIPTION
@@ -25,7 +25,12 @@ Authors@R: c(
 Depends: R (>= 2.10)
 Imports: runjags, parallel, readxl, coda, ggplot2, scales, stats4, Rdpack, dplyr
 RdMacros: Rdpack
-Suggests: knitr, R.rsp, tidyverse, gridtext
+Suggests: 
+    knitr,
+    R.rsp,
+    tidyverse,
+    gridtext,
+    rmarkdown
 License: GPL-3
 LazyData: true
 Encoding: UTF-8
