--- a/invitroTKstats/DESCRIPTION
+++ b/invitroTKstats/DESCRIPTION
@@ -17,6 +17,8 @@ Authors@R: c(
              comment = c(ORCID = "0000-0002-4024-534X")), 
            person("Sarah", "Davidson-Fritz", email = "davidsonfritz.sarah@epa.gov", 
              role = c("aut"), comment = c(ORCID = "0000-0002-2891-9380")),
+           person("Lindsay","Knupp",email = "knupp.lindsay@epa.gov",
+           role = c("ctb")), 
            person("Zhao", "Zhihui", role = c("ctb")),
            person("Chantel", "Nicolas", role = c("ctb"),
              comment = c(ORCID = "0000-0003-2061-5830")),
