update the overall git ignore file to inclue a data-raw/Kreutz-Clint sub-dir

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ invitroTKstats/data-raw/Caco2
 invitroTKstats/data-raw/Smeltz-Clint
 invitroTKstats/data-raw/Smeltz-UC
 invitroTKstats/data-raw/Smeltz-RED
+invitroTKstats/data-raw/Kreutz-Clint
