--- a/invitroTKstats/DESCRIPTION
+++ b/invitroTKstats/DESCRIPTION
@@ -24,6 +24,12 @@ Authors@R: c(
              comment = c(ORCID = "0000-0003-2061-5830")),
            person("Anna", "Kreutz", role = c("ctb"))
            )
+Author: John Wambaugh [aut, cre] (<https://orcid.org/0000-0002-4024-534X>),
+  Sarah Davidson-Fritz [aut] (<https://orcid.org/0000-0002-2891-9380>),
+  Lindsay Knupp [ctb],
+  Zhao Zhihui [ctb],
+  Chantel Nicolas [ctb] (<https://orcid.org/0000-0003-2061-5830>),
+  Anna Kreutz [ctb],
 Depends: R (>= 2.10)
 Imports: runjags, parallel, readxl, coda, ggplot2, scales, stats4, Rdpack, methods, stats, utils, dplyr, rlang
 RdMacros: Rdpack
