--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ invitroTKstats/data-raw/Caco2
 invitroTKstats/data-raw/Smeltz-Clint
 invitroTKstats/data-raw/Smeltz-UC
 invitroTKstats/data-raw/Smeltz-RED
+
+# Package binaries
+*.tar.gz
+
