--- a/invitroTKstats/NAMESPACE
+++ b/invitroTKstats/NAMESPACE
@@ -18,6 +18,7 @@ export(format_fup_uc)
 export(merge_level0)
 export(plot_clint)
 export(plot_fup_uc)
+export(round_output)
 export(sample_verification)
 export(summarize_table)
 import(Rdpack)
