resolve issues identified by devtools::check(); update documentation with roxygen2::roxygenize() in the invitroTKstats package Rproj

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,5 +39,5 @@ importFrom(stats4,coef)
 importFrom(stats4,mle)
 importFrom(utils,head)
 importFrom(utils,read.csv)
-importFrom(utils,read.table)
+importFrom(utils,read.delim)
 importFrom(utils,write.table)
