update DESCRIPTION removing old URL (moved to README doc) and adding in updated documentation with uuse_github_links(); update URLs based on url_check() and rebuilt the README docs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,7 @@ LazyData: true
 Encoding: UTF-8
 VignetteBuilder: knitr, R.rsp
 RoxygenNote: 7.3.2
-URL: https://www.epa.gov/chemical-research/rapid-chemical-exposure-and-dose-research
 NeedsCompilation: no
 Maintainer: Sarah E. Davidson-Fritz <davidsonfritz.sarah@epa.gov>
+URL: https://github.com/USEPA/invitroTKstats
+BugReports: https://github.com/USEPA/invitroTKstats/issues
